--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.1",
     "ejs": "^3.1.9",
+    "escape-html": "^1.0.3",
     "express": "^4.18.2",
     "express-group-routes": "^1.1.0",
+    "express-rate-limit": "^6.7.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
