--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "express-rate-limit": "^6.7.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "path": "^0.12.7"
