--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 #ENVIRONMENT='local'
 ENVIRONMENT='server'
 PORT=3034
-MONGO_URI="mongodb://localhost:27017/eduBlink"
-#MONGO_URI="mongodb+srv://dev12:Infoicon%40123@cluster0.1tdgxxn.mongodb.net/EmpDashboar?retryWrites=true&w=majority"
+#MONGO_URI="mongodb://localhost:27017/eduBlink"
+MONGO_URI="mongodb+srv://dev12:Infoicon%40123@cluster0.1tdgxxn.mongodb.net/EmpDashboar?retryWrites=true&w=majority"
 TOKEN_KEY = "dhsjf3423jhsdf3423df"
 #EMAIL_HOST = 'smtp.gmail.com'
 #EMAIL_PORT = 587
