--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-rate-limit": "^6.7.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
